@@ -1,0 +1,3 @@
+<more to come, see wiki for now>
+Notes:
+Required PHP 5
